--- a/views/game.ejs
+++ b/views/game.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Online Junqi</title>
+        <title>PVP Military Chess</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="A real-time multi-player junqi app">
         <meta name="author" content="">
@@ -12,7 +12,7 @@
     <body>
         <nav role="navigation" class="navbar navbar-inverse navbar-static-top">
             <div class="navbar-header">
-                <a href="/" class="navbar-brand">Online Junqi</a>
+                <a href="/" class="navbar-brand">PVP Military Chess</a>
             </div>
         </nav>
         <div class="container">
