--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Online Junqi</title>
+        <title>PVP Military Chess</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="A real-time multi-player junqi app">
         <meta name="author" content="">
@@ -12,7 +12,7 @@
     <body>
         <div id="banner" class="jumbotron">
             <div class="container">
-                <h1 style="color: white;">Online Junqi</h1>
+                <h1 style="color: white;">PVP Military Chess</h1>
                 <p>
                     The game Junqi (军旗), which translates to "army chess", is a Chinese board game that can now be played directly in your browser. 
                     The objective of the game is to capture your opponent's flag.
